# PineFetch

./: .gitignore  README.md  changelog.md  package-lock.json  package.json  publish.sh
scripts/: dev-server.mjs  prepare-deno-runtime.sh  prepare-ffmpeg-runtime.sh  prepare-whisper-runtime.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/deno-runtime/: .keep  PLACEHOLDER
src-tauri/resources/ffmpeg-runtime/: PLACEHOLDER
src-tauri/resources/whisper-runtime/: PLACEHOLDER
src-tauri/src/: main.rs
