[package]
name = "pinefetch"
version = "0.2.0"
description = "Local yt-dlp desktop UI"
authors = ["You"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["api-all"] }
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
